--- a/sheila.cfg
+++ b/sheila.cfg
@@ -1,14 +1,20 @@
+# Backend configuration. MySQL credentials
 [BE]
 port=3306
 host=localhost
 db=sheila
-user=
-pass=
+user=root
+pass=0kkaaj
+# Flask configuration. Port and host to listen to, and flask debug flag
 [Interface]
 debug=False
 host=127.0.0.1
 port=5000
+# Sheila specific config parameters
 [Sheila]
-cstfile=sheila.cst
+clearOnStart=True ;erases sheila.cst and clears the backend database on start. Shoud set to false on production
+cstfile=sheila.cst ;CST file path
 [Log]
 level=INFO
+maxFileSize=1048576
+logfile=sheila.log
