No SQL ALTER needed anymore. Minor code refactoring.

--- a/sheila.cfg
+++ b/sheila.cfg
@@ -3,8 +3,8 @@
 port=3306
 host=localhost
 db=sheila
-user=root
-pass=0kkaaj
+user=
+pass=
 # Flask configuration. Port and host to listen to, and flask debug flag
 [Interface]
 debug=False
